--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.28.0",
     "styled-components": "^5.3.10"
   },
