--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL = https://v2.api.noroff.dev;
+VITE_API_BASE_URL = https://v2.api.noroff.dev
+VITE_API_KEY = e44687fd-cec9-4068-aaf5-d70c3f7b5411
