--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hookform/resolvers": "^3.9.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.53.2",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6",
     "styled-components": "^5.3.10",
+    "yup": "^1.5.0",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
