--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,8 @@
     "plugins": ["react", "prettier"],
     "rules": {
       "prettier/prettier": "error",
-      "react/prop-types": "off"
+      "react/prop-types": "off",
+      "no-unused-vars": "warn"
     }
   }
   
